--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -207,6 +207,7 @@
 			width: 180px;
 			margin: 0 auto;
 			margin-top: 8px;
+			line-height: 14;
 			&:hover{
 				background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
 			}
